# GraphDB

./: .gitignore  CMakeLists.txt
benchmark/: CMakeLists.txt
benchmark/src/benchmark/: LubmBenchmark.cpp  LubmBenchmark.h  ResultsTable.h  SummaryPrinter.cpp  SummaryPrinter.h  main.cpp
cli/: CMakeLists.txt
cli/src/cli/: Cli.cpp  Cli.h  main.cpp
data/: familyGuy.ttl
graphDB/: CMakeLists.txt
graphDB/src/graphDB/: GraphDB.cpp  GraphDB.h
graphDB/src/graphDB/dictionary/: Dictionary.cpp  Dictionary.h  dictionary.cpp  dictionary.h
graphDB/src/graphDB/evaluation/: FullScan.cpp  FullScan.h  QueryAnswerer.cpp  QueryAnswerer.h  Scan.cpp  Scan.h  ScanP.cpp  ScanP.h  ScanSingleValue.cpp  ScanSingleValue.h  ScanSorO.cpp  ScanSorO.h  ScanTwoVariables.cpp  ScanTwoVariables.h
graphDB/src/graphDB/fileParser/: FileParser.cpp  FileParser.h
graphDB/src/graphDB/hash/: SpookyHash.cpp  SpookyHash.h
graphDB/src/graphDB/index/: Dictionary.cpp  Dictionary.h  IndexedTripleTable.cpp  IndexedTripleTable.h  LinearProbingIndex.h  RobinHoodIndex.h  ThreeHashKey.h  Triple.h  TwoHashKey.h  VectorIndex.h
graphDB/src/graphDB/queryOptimiser/: QueryOptimiser.cpp  QueryOptimiser.h
graphDB/src/graphDB/queryParser/: Query.h  QueryLexer.cpp  QueryLexer.h  QueryParser.cpp  QueryParser.h  TriplePattern.cpp  TriplePattern.h
test/: CMakeLists.txt
test/graphDB/: GraphDBTestFixture.h  test_GraphDB.cpp
test/graphDB/dictionary/: test_Dictionary.cpp
test/graphDB/evaluation/: ScanTestFixture.h  test_QueryAnswerer.cpp  test_Scan.cpp
test/graphDB/fileParser/: FileParserTestFixture.h  test_FileParser.cpp
test/graphDB/index/: test_Dictionary.cpp  test_IndexedTripleTable.cpp  test_LinearProbingIndex.cpp
test/graphDB/queryOptimiser/: test_QueryOptimiser.cpp
test/graphDB/queryParser/: test_QueryLexer.cpp  test_QueryParser.cpp
